can create new book and list all books

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -10,6 +10,16 @@
     <%= f.label :author %><br>
     <%= f.text_field :author %>
   </p>
+  
+  <p>
+    <%= f.label :page %><br>
+    <%= f.text_field :page %>
+  </p>
+  
+  <p>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </p>
  
   <p>
     <%= f.submit %>
