--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,21 @@
 <h1>Books</h1>
 
-<%= link_to "Add New Book", new_book_path %>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Author</th>
+    <th>Page</th>
+    <th>Description</th>
+  </tr>
+ 
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.author %></td>
+      <td><%= book.page %></td>
+      <td><%= book.description %></td>
+    </tr>
+  <% end %>
+</table>
+
+<p><%= link_to "Add New Book", new_book_path %>
