--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,79 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$smoke: #333;
+
+body {
+	padding-bottom: 50px;
+}
+
+footer{
+	padding: 10px;
+	background-color: $smoke;
+	opacity: 0.5;
+	text-align: center;
+	font-size: 10px;
+	color: #fff;
+	position: absolute;
+	height: 50px;
+	bottom: 0;
+	width: 100%;
+}
+
+.content {
+	height: 100%;
+	position: relative;
+}
+
+.hero{
+	background-image: url("/books-bg.jpeg");
+	background-size: 100%;
+	height: 200px;
+	width: 100%;
+	position: absolute;
+}
+
+.hero-smokescreen {
+	background-color: $smoke;
+	opacity: 0.5;
+	height: 200px;
+	width: 100%;
+	position: relative;
+}
+
+.logo {
+	position: absolute;
+	top: 0;
+}
+
+.book-nav {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	z-index: 1;
+	padding: 10px;
+}
+
+.single-book {
+	text-align: center;
+	padding: 10px 0;
+}
+
+.delete-button {
+	text-align: right;
+	width: 85%;
+}
+
+.book-cover {
+	border: 1px solid black;
+	border-radius: 100px;
+	padding: 10px;
+	width: 200px;
+	height: 200px;
+}
+
+.trial {
+	font-size: 18px;
+	// color: pink;
+}
