--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,31 +1,35 @@
-<h1>Editing book</h1>
- 
-<%= form_for :book, url: book_path(@book), method: :patch do |f| %>
- 
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :author %><br>
-    <%= f.text_field :author %>
-  </p>
-  
-  <p>
-    <%= f.label :page %><br>
-    <%= f.text_field :page %>
-  </p>
-  
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
- 
-<% end %>
- 
-<%= link_to 'Back', books_path %>
+<div class="container">
+  <div class="row">
+    <h1>Editing book</h1>
+    <hr>
+  </div>
+  <div class="row">
+    <%= form_for :book, url: book_path(@book), method: :patch do |f| %>
+     
+      <p>
+        <%= f.label :title %><br>
+        <%= f.text_field :title, :class => "form-control" %>
+      </p>
+     
+      <p>
+        <%= f.label :author %><br>
+        <%= f.text_field :author, :class => "form-control" %>
+      </p>
+      
+      <p>
+        <%= f.label :page %><br>
+        <%= f.text_field :page, :class => "form-control" %>
+      </p>
+      
+      <p>
+        <%= f.label :description %><br>
+        <%= f.text_area :description, :class => "form-control" %>
+      </p>
+     
+      <p>
+        <%= f.submit %>
+      </p>
+     
+    <% end %>
+  </div>
+</div>
