--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,27 +1,33 @@
-<h1>New Book</h1>
-
-<%= form_for :book, url: books_path do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :author %><br>
-    <%= f.text_field :author %>
-  </p>
-  
-  <p>
-    <%= f.label :page %><br>
-    <%= f.text_field :page %>
-  </p>
-  
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<div class="container">
+  <div class="row">
+   <h1>New Book</h1>
+   <hr>
+  </div>
+  <div class="row">
+    <%= form_for :book, url: books_path do |f| %>
+      <p>
+<!--         <%= f.label :title %><br> -->
+        <%= f.text_field :title, :class => "form-control", :placeholder => "Title" %>
+      </p>
+     
+      <p>
+<!--         <%= f.label :author %><br> -->
+        <%= f.text_field :author, :class => "form-control", :placeholder => "Author" %>
+      </p>
+      
+      <p>
+<!--         <%= f.label :page %><br> -->
+        <%= f.text_field :page, :class => "form-control", :placeholder => "Page Number" %>
+      </p>
+      
+      <p>
+<!--         <%= f.label :description %><br> -->
+        <%= f.text_area :description, :class => "form-control", :placeholder => "Brief summary of the plot so far" %>
+      </p>
+     
+      <p>
+        <%= f.submit %>
+      </p>
+    <% end %>
+  </div>
+</div>
