--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,19 +1,23 @@
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
- 
-<p>
-  <strong>Author:</strong>
-  <%= @book.author %>
-</p> 
+<div class="container">
+	  <strong>Title:</strong>
+	  <%= @book.title %>
+	</p>
+	 
+	<p>
+	  <strong>Author:</strong>
+	  <%= @book.author %>
+	</p> 
 
-<p>
-  <strong>Page:</strong>
-  <%= @book.page %>
-</p> 
+	<p>
+	  <strong>Page:</strong>
+	  <%= @book.page %>
+	</p> 
 
-<p>
-  <strong>Description:</strong>
-  <%= @book.description %>
-</p>
+	<p>
+	  <strong>Description:</strong>
+	  <%= @book.description %>
+	</p>
+
+	<br><%= link_to 'Edit', edit_book_path(@book.id) %>
+
+</div>
